--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,11 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,700,1,200"
       rel="stylesheet" />
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  </head>
   <body class="mat-typography">
     <app-root></app-root>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
