--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   </head>
   <body class="mat-typography">
     <app-root></app-root>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="https://kit.fontawesome.com/baf7e7dc0f.js" crossorigin="anonymous"></script>
+    <!-- <script src="assets/js/bootstrap.bundle.min.js"></script> -->
+    <!-- <script src="https://kit.fontawesome.com/baf7e7dc0f.js" crossorigin="anonymous"></script> -->
   </body>
 </html>
